--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js" ></script>
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <title></title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="container">
+      <p id="contact1"></p>
+      <div class="location1Details">
+        <p></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <p id="contact2"></p>
+      <div class="location2Details">
+        <p></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <p id="contact3"></p>
+      <div class="location3Details">
+        <p></p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
