changed out prevous element names for proper ones

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 <body>
   <div class="container">
     <div class="container">
-      <p id="contact1"></p>
+      <p id="place1"></p>
       <div class="location1Details">
         <p></p>
       </div>
     </div>
 
     <div class="container">
-      <p id="contact2"></p>
+      <p id="place2"></p>
       <div class="location2Details">
         <p></p>
       </div>
     </div>
 
     <div class="container">
-      <p id="contact3"></p>
+      <p id="place3"></p>
       <div class="location3Details">
         <p></p>
       </div>
